--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "0.1.157",
     "expo": "~47.0.3",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-web": "~0.18.9",
+    "expo-sharing": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
